--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -51,6 +52,7 @@
     <Compile Include="EDistrito.cs" />
     <Compile Include="EProvincia.cs" />
     <Compile Include="ETipoIden.cs" />
+    <Compile Include="NCliente.cs" />
     <Compile Include="NDepartamento.cs" />
     <Compile Include="NDistrito.cs" />
     <Compile Include="NProvincia.cs" />
