--- a/Sistema/Presentacion.csproj
+++ b/Sistema/Presentacion.csproj
@@ -66,6 +66,12 @@
     <Compile Include="Forms\Cliente.Designer.cs">
       <DependentUpon>Cliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Cotizar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Cotizar.Designer.cs">
+      <DependentUpon>Cotizar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FamiliaModelo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,6 +129,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Cliente.resx">
       <DependentUpon>Cliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Cotizar.resx">
+      <DependentUpon>Cotizar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FamiliaModelo.resx">
       <DependentUpon>FamiliaModelo.cs</DependentUpon>
